--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,39 +6,51 @@ permissions:
 on:
   release:
     types: [published]
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: "Tag to release (e.g., v0.2.1)"
-        required: true
-        type: string
 
 jobs:
-  upload-binaries:
-    name: Upload binaries
+  release:
+    name: Release
     strategy:
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-24.04-arm
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-          - target: aarch64-pc-windows-msvc
-            os: windows-latest
+          - os: ubuntu-latest
+            goos: linux
+            goarch: amd64
+          - os: ubuntu-24.04-arm
+            goos: linux
+            goarch: arm64
+          - os: macos-latest
+            goos: darwin
+            goarch: amd64
+          - os: macos-latest
+            goos: darwin
+            goarch: arm64
+          - os: windows-latest
+            goos: windows
+            goarch: amd64
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v6
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: taiki-e/upload-rust-binary-action@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          bin: sopmod
-          target: ${{ matrix.target }}
-          archive: $bin-$target
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.event.inputs.tag && format('refs/tags/{0}', github.event.inputs.tag) || github.ref }}
+          go-version: "1.25"
+      - name: Build
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
+        run: |
+          ext=""
+          if [ "$GOOS" = "windows" ]; then ext=".exe"; fi
+          go build -o sopmod${ext} ./gen
+      - name: Archive
+        shell: bash
+        run: |
+          if [ "${{ matrix.goos }}" = "windows" ]; then
+            7z a sopmod-${{ matrix.goos }}-${{ matrix.goarch }}.zip sopmod.exe
+          else
+            tar czf sopmod-${{ matrix.goos }}-${{ matrix.goarch }}.tar.gz sopmod
+          fi
+      - name: Upload
+        uses: softprops/action-gh-release@v2
+        with:
+          files: sopmod-${{ matrix.goos }}-${{ matrix.goarch }}.*
